Bug 117318 - [CSS Exclusions][CSS Shapes] Incorrect compile flag in LayoutState.h
Summary: [CSS Exclusions][CSS Shapes] Incorrect compile flag in LayoutState.h
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: CSS (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Bear Travis
URL:
Keywords:
Depends on:
Blocks: 117173
  Show dependency treegraph
 
Reported: 2013-06-06 13:38 PDT by Bear Travis
Modified: 2013-06-07 15:05 PDT (History)
4 users (show)

See Also:


Attachments
Initial patch (1.35 KB, patch)
2013-06-06 13:45 PDT, Bear Travis
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Bear Travis 2013-06-06 13:38:59 PDT
ExclusionShapeInsideInfo* m_exclusionShapeInsideInfo is guarded by the CSS_EXCLUSIONS compile flag, but should use the CSS_SHAPES flag.
Comment 1 Bear Travis 2013-06-06 13:45:11 PDT
Created attachment 203965 [details]
Initial patch
Comment 2 Alexandru Chiculita 2013-06-07 14:44:03 PDT
Comment on attachment 203965 [details]
Initial patch

r=me
Comment 3 WebKit Commit Bot 2013-06-07 15:05:04 PDT
Comment on attachment 203965 [details]
Initial patch

Clearing flags on attachment: 203965

Committed r151338: <http://trac.webkit.org/changeset/151338>
Comment 4 WebKit Commit Bot 2013-06-07 15:05:07 PDT
All reviewed patches have been landed.  Closing bug.