[CSS Exclusions][CSS Shapes] Incorrect compile flag in LayoutState.h https://bugs.webkit.org/show_bug.cgi?id=117318

Reviewed by Alexandru Chiculita.

m_exclusionShapeInsideInfo should be guarded by the CSS_SHAPES flag,
not the CSS_EXCLUSIONS flag.

No tests required.

* rendering/LayoutState.h:


Canonical link: https://commits.webkit.org/135601@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151338 268f45cc-cd09-0410-ab3c-d52691b4dbfc